# hypergraphs

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  core.rs  fenwick.rs  hypergraph.rs  main.rs  opt.rs
src/cli/: gen.rs  opt.rs  plot.rs
src/core/: fenwick.rs  hypergraph.rs  model.rs  opt.rs  simulation.rs
