[package]
name = "hypergraphs"
version = "0.1.0"
authors = ["konstantin-ogulchansky <k.ohulchanskyi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rand_pcg = "0.3.0"
serde = "1.0.125"
serde_json = "1.0.64"
clap = "3.0.0-beta.2"